# yokatlas-py

./: .gitignore  API.md  CHANGELOG.md  MIGRATION.md  README.md  README_EN.md  gitignore  lisans_search_analysis_report.md  multi_year_data_test_results.md  pyproject.toml  setup.py
.github/workflows/: github-release.yml  python-publish.yml  release.yml  test.yml
examples/: typed_usage.py
github_workflows/: publish.yml
tests/: __init__.py  conftest.py  test_client_async.py  test_client_sync.py  test_lookup.py  test_models.py
tests/fixtures/: __init__.py  html_responses.py
tests/integration/: __init__.py
tests/unit/: __init__.py
yokatlas_py/: __init__.py  _lookup.py  _serialization.py  base_fetcher.py  client.py  columnData.json  config.py  exceptions.py  form_data.py  http_client.py  lisansatlasi.py  lisanstercihsihirbazi.py  models.py  onlisans_form_data.py  onlisansatlasi.py  onlisanstercihsihirbazi.py  search_utils.py  search_wrappers.py  utils.py
yokatlas_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yokatlas_py/fetchers/: __init__.py  akademisyen_sayilari.py  cinsiyet_dagilimi.py  degisim_programi_bilgileri.py  genel_bilgiler.py  kayitli_ogrenci_cinsiyet_dagilimi.py  kontenjan_yerlesme.py  lise_alani_dagilimi.py  lise_bazinda_yerlesen_dagilimi.py  lise_grubu_ve_tipi_dagilimi.py  mezuniyet_yili_cinsiyet_dagilimi.py  mezuniyet_yili_dagilimi.py  ogrenim_durumu.py  okul_birincisi_yerlesen.py  sehir_ve_cografi_bolge_dagilimi.py  taban_puan_ve_basari_sirasi_istatistikleri.py  tercih_edilen_iller.py  tercih_edilen_program_turleri.py  tercih_edilen_programlar.py  tercih_edilen_universite_turleri.py  tercih_edilen_universiteler.py  tercih_istatistikleri.py  tercih_kullanma_oranlari.py  yatay_gecis_bilgileri.py  yerlesen_basari_siralari.py  yerlesen_il_dagilimi.py  yerlesen_ortalama_netler.py  yerlesen_puan_bilgileri.py  yerlesen_son_kisi_bilgileri.py  yerlesen_tercih_istatistikleri.py
yokatlas_py/lisans_fetchers/: __init__.py  akademisyen_sayilari.py  cinsiyet_dagilimi.py  degisim_programi_bilgileri.py  genel_bilgiler.py  kayitli_ogrenci_cinsiyet_dagilimi.py  kontenjan_yerlesme.py  lise_alani_dagilimi.py  lise_bazinda_yerlesen_dagilimi.py  lise_grubu_ve_tipi_dagilimi.py  mezuniyet_yili_cinsiyet_dagilimi.py  mezuniyet_yili_dagilimi.py  ogrenim_durumu.py  okul_birincisi_yerlesen.py  sehir_ve_cografi_bolge_dagilimi.py  taban_puan_ve_basari_sirasi_istatistikleri.py  tercih_edilen_iller.py  tercih_edilen_program_turleri.py  tercih_edilen_programlar.py  tercih_edilen_universite_turleri.py  tercih_edilen_universiteler.py  tercih_istatistikleri.py  tercih_kullanma_oranlari.py  yatay_gecis_bilgileri.py  yerlesen_basari_siralari.py  yerlesen_il_dagilimi.py  yerlesen_ortalama_netler.py  yerlesen_puan_bilgileri.py  yerlesen_son_kisi_bilgileri.py  yerlesen_tercih_istatistikleri.py
yokatlas_py/onlisans_fetchers/: __init__.py  akademisyen_sayilari.py  cinsiyet_dagilimi.py  degisim_programi_bilgileri.py  genel_bilgiler.py  kayitli_ogrenci_cinsiyet_dagilimi.py  kontenjan_yerlesme.py  lise_alani_dagilimi.py  lise_bazinda_yerlesen_dagilimi.py  lise_grubu_ve_tipi_dagilimi.py  mezuniyet_yili_cinsiyet_dagilimi.py  mezuniyet_yili_dagilimi.py  ogrenim_durumu.py  okul_birincisi_yerlesen.py  sehir_ve_cografi_bolge_dagilimi.py  taban_puan_ve_basari_sirasi_istatistikleri.py  tercih_edilen_iller.py  tercih_edilen_program_turleri.py  tercih_edilen_programlar.py  tercih_edilen_universite_turleri.py  tercih_edilen_universiteler.py  tercih_istatistikleri.py  tercih_kullanma_oranlari.py  yatay_gecis_bilgileri.py  yerlesen_il_dagilimi.py  yerlesen_ortalama_netler.py  yerlesen_son_kisi_bilgileri.py  yerlesen_tercih_istatistikleri.py
