[project]
name = "yokatlas-py"
version = "1.0.0"
description = "Python client for the YÖK Atlas tercih kılavuzu JSON API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Said Sürücü", email = "saidsrc@gmail.com"}]
keywords = ["yokatlas", "turkish-education", "university", "yok", "higher-education", "turkey", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/saidsurucu/yokatlas-py", Issues = "https://github.com/saidsurucu/yokatlas-py/issues"}
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "black>=24.0",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["yokatlas_py"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that hit the real YÖK Atlas API (opt-in)",
]

[tool.coverage.run]
source = ["yokatlas_py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]
